--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React</title>
- 
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -23,10 +23,9 @@
 
   body {
     font-family: "Poppins", poppins-regular, sans-serif;
-
+    background: rgb(4, 0, 54);
+    color: whitesmoke;
   }
-
-  
 </style>
 
 <body>
